--- a/main.html
+++ b/main.html
@@ -17,31 +17,31 @@
 	<div class="main">
 		<h1 id="title">Shopping List</h1>
 		<h2 id="help">?</h2>
+	
+	<form name="checkListForm">
+			<input type="text" name="checkListItem"/>
+	</form>
 
-<!-- ADD BUTTON FOR LIST ITEMS -->
+	<div id="button">Add!</div>
+	<br/>		
+	<div class="list"></div>
+
+
+
+
+
+
+<!-- ADD BUTTON FOR LIST ITEMS 
 
 		<div id="add-button"><input id="food" type="text" maxlength="100" height="25" placeholder="Add Item"/><button class="plus">&#43;</button></div>
 
-<!--LIST ITEMS -->
+<!--LIST ITEMS 
 
 		<ul id="main-list">
 			<li class="list-item"></li>
-			
-			
-<!--
-			<li class="list-item"><input type="checkbox"/><input type="text" maxlength="100" height="25" placeholder="Item"/><span class="remove">&#10006;</span></li>
-			<li class="list-item"><input type="checkbox"/><input type="text" maxlength="100" height="25" placeholder="Item"/><span class="remove">&#10006;</span></li>
-			<li class="list-item"><input type="checkbox"/><input type="text" maxlength="100" height="25" placeholder="Item"/><span class="remove">&#10006;</span></li>
-			-->
-			
 		</ul>
-
-		
-	
 	</div>
-
-
-
+	-->
 	
 </body>
 </html>
