updated jQuery and CSS
added jquery functionality, updated CSS styling and added png for
delete button

--- a/main.html
+++ b/main.html
@@ -16,16 +16,17 @@
 
 	<div class="main">
 		<h1 id="title">Shopping List</h1>
-		<h2 id="help">?</h2>
+		<h2 id="help"><a href="link" target="blank">?</a></h2>
 	
 	<form name="checkListForm">
-			<input type="text" name="checkListItem"/>
+			<input type="text" name="checkListItem" id="check-list-item" value=""/>
 	</form>
 
 	<div id="button">Add!</div>
 	<br/>		
 	<div class="list"></div>
 
+	</div>
 
 
 
